# inversion-design-ideas

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  ruff.toml  search.html  searchindex.js
.github/workflows/: docs.yml  style.yml  test.yml
_sources/getting-started/: index.rst.txt
_sources/reference/: inversion.rst.txt  objective-functions.rst.txt
docs/: Makefile  conf.py  index.rst  install.rst
docs/api/: index.rst
docs/reference/: base.rst  conditions.rst  directives.rst  errors.rst  index.rst  inversion.rst  minimizers.rst  operators.rst  preconditioners.rst  simulations.rst  utils.rst
docs/user-guide/: index.rst
getting-started/: index.html
notebooks/: 01_repr.ipynb  02_linear-regressor.ipynb  03_beta-cooling.ipynb  04_inversion-class.ipynb  05_caching-data-misfit-values.ipynb  05_inversion-class.ipynb  06_jac_as_linear_operator.ipynb  07_gravity-inversion.ipynb  08_conditions.ipynb  09_inversion-recipes.ipynb  09_inversion-with-constructor.ipynb  10_multiple-conditions.ipynb  11_gravity-inversion-with-preconditioner.ipynb  11_gravity-sparse-inversion.ipynb  12_gravity-inversion-with-constructor.ipynb  13_gravity-sparse-inversion-manual.ipynb  13_gravity-sparse-single-inversion.ipynb  14_gravity-sparse-inversion-split.ipynb  14_gravity-sparse-inversion.ipynb  15_gravity-sparse-inversion-with-directives.ipynb  15_gravity-sparse-inversion.ipynb  16_gravity-sparse-inversion-constructor.ipynb  20_dc-resistivity-inversion.ipynb  21_dc-resistivity-inversion-w-beta-cooling.ipynb  22_dc-inversion-gauss-newton-iter.ipynb  22_dc-resistivity-inversion-w-bfgs-precond.ipynb  30_gravity-sparse-inversion.ipynb  31_gravity-sparse-inversion-constructor.ipynb  40_gravity-inversion-with-inactive-cells.ipynb  50_gravity-inversion-with-model-slice.ipynb  51_joint-inversion.ipynb  gravity.py  regressor.py  talk-01-objective-functions.ipynb  talk-02-linear-regressor.ipynb  talk-03-naive-beta-cooling.ipynb  talk-04-inversion-class.ipynb  talk-05-gravity-inversion.ipynb
reference/: base.html  conditions.html  directives.html  errors.html  index.html  inversion.html  minimizers.html  objective-functions.html  operators.html  preconditioners.html  simulations.html  utils.html
reference/api/: inversion_ideas.DataMisfit.html  (+44 more)
tests/: test_conditions.py  test_data_misfit.py  test_objective_functions.py  test_preconditioners.py  test_regularizations.py  utils.py
user-guide/: index.html
(+101 files in other folders)
